@@ -30,6 +30,7 @@ when "4"
       prefs[:apps4] = multiple_choice "Starter apps for Rails 4.0. More to come.",
         [["learn-rails", "learn-rails"],
         ["rails-bootstrap", "rails-bootstrap"],
+        ["rails-foundation", "rails-foundation"],
         ["rails-devise", "rails-devise"]]
     when 'contributed_app'
       prefs[:apps4] = multiple_choice "No contributed applications are available.",
@@ -82,6 +83,22 @@ case prefs[:apps4]
     prefs[:integration] = false
     prefs[:fixtures] = false
     prefs[:frontend] = 'bootstrap3'
+    prefs[:email] = 'none'
+    prefs[:authentication] = false
+    prefs[:devise_modules] = false
+    prefs[:authorization] = false
+    prefs[:starter_app] = false
+    prefs[:form_builder] = 'simple_form'
+    prefs[:quiet_assets] = true
+    prefs[:local_env_file] = true
+    prefs[:better_errors] = true
+  when 'rails-foundation'
+    prefs[:git] = true
+    prefs[:database] = 'default'
+    prefs[:unit_test] = false
+    prefs[:integration] = false
+    prefs[:fixtures] = false
+    prefs[:frontend] = 'foundation5'
     prefs[:email] = 'none'
     prefs[:authentication] = false
     prefs[:devise_modules] = false
