@@ -3,6 +3,7 @@ h1. CHANGELOG
 h2. 2.4.19 unreleased
 
 * add 'rails-devise' example application
+* add 'rails-foundation' example application
 
 h2. 2.4.18 December 28, 2013
 
